--- a/72_2D_MFPADs_CH11_experiment.ipynb
+++ b/72_2D_MFPADs_CH11_experiment.ipynb
@@ -149,21 +149,30 @@
     "#import 3d graph kilian\n",
     "MFPAD_RCLtest=fugi.import_MFPAD3D(fileRCL, loc)\n",
     "MFPAD_RCRtest=fugi.import_MFPAD3D(fileRCR, loc)\n",
-    "MFPAD_SCRtest=fugi.import_MFPAD3D(fileSCR, loc)\n",
-    "MFPAD_SCLtest=fugi.import_MFPAD3D(fileSCL, loc)\n",
     "\n",
+    "#sum\n",
+    "MFPAD_RCLtest_sum=np.sum(MFPAD_RCLtest,axis=0)\n",
+    "MFPAD_RCRtest_sum=np.sum(MFPAD_RCRtest,axis=0)\n",
+    "\n",
+    "#normalise each and sum\n",
     "MFPAD_RCLtest_sum=np.sum(fugi.normalise_matrix(MFPAD_RCLtest),axis=0)\n",
     "MFPAD_RCRtest_sum=np.sum(fugi.normalise_matrix(MFPAD_RCRtest),axis=0)\n",
     "MFPAD_Rtest_sum = np.add(MFPAD_RCLtest_sum,MFPAD_RCRtest_sum)\n",
     "\n",
-    "MFPAD_SCLtest_sum=np.sum(fugi.normalise_matrix(MFPAD_SCLtest),axis=0)\n",
-    "MFPAD_SCRtest_sum=np.sum(fugi.normalise_matrix(MFPAD_SCRtest),axis=0)\n",
+    "if fileSCL and fileSCR is not None:\n",
+    "    MFPAD_SCRtest=fugi.import_MFPAD3D(fileSCR, loc)\n",
+    "    MFPAD_SCLtest=fugi.import_MFPAD3D(fileSCL, loc)\n",
+    "    MFPAD_SCRtest_sum=np.sum(MFPAD_SCRtest,axis=0)\n",
+    "    MFPAD_SCLtest_sum=np.sum(MFPAD_SCLtest,axis=0)\n",
     "\n",
-    "MFPAD_SCLtest_flip_sum=np.flip(MFPAD_SCLtest_sum,axis=0)\n",
-    "MFPAD_SCRtest_flip_sum=np.flip(MFPAD_SCRtest_sum,axis=0)\n",
-    "MFPAD_Stest_sum = np.add(MFPAD_SCLtest_flip_sum,MFPAD_SCRtest_flip_sum)\n",
+    "    MFPAD_SCLtest_sum=np.sum(fugi.normalise_matrix(MFPAD_SCLtest),axis=0)\n",
+    "    MFPAD_SCRtest_sum=np.sum(fugi.normalise_matrix(MFPAD_SCRtest),axis=0)\n",
     "\n",
-    "MFPAD_tottest=np.add(MFPAD_Stest_sum,MFPAD_Rtest_sum)"
+    "    MFPAD_SCLtest_flip_sum=np.flip(MFPAD_SCLtest_sum,axis=0)\n",
+    "    MFPAD_SCRtest_flip_sum=np.flip(MFPAD_SCRtest_sum,axis=0)\n",
+    "    MFPAD_Stest_sum = np.add(MFPAD_SCLtest_flip_sum,MFPAD_SCRtest_flip_sum)\n",
+    "\n",
+    "    MFPAD_tottest=np.add(MFPAD_Stest_sum,MFPAD_Rtest_sum)"
    ]
   },
   {
@@ -219,13 +228,14 @@
     "#normalising entries\n",
     "MFPAD_RCR_norm = fugi.normalise_matrix(MFPAD_RCR,normtype=2) # z values normalise to number of event\n",
     "MFPAD_RCL_norm = fugi.normalise_matrix(MFPAD_RCL,normtype=2) # z values normalise to number of event\n",
-    "MFPAD_SCR_norm = fugi.normalise_matrix(MFPAD_SCR,normtype=2) # z values normalise to number of event\n",
-    "MFPAD_SCL_norm = fugi.normalise_matrix(MFPAD_SCL,normtype=2) # z values normalise to number of event\n",
-    "\n",
     "cosx_RCR_norm = fugi.normalise_matrix(cosx_RCR,normtype=2) # z values normalise to number of event\n",
     "cosx_RCL_norm = fugi.normalise_matrix(cosx_RCL,normtype=2) # z values normalise to number of event\n",
-    "cosx_SCR_norm = fugi.normalise_matrix(cosx_SCR,normtype=2) # z values normalise to number of event\n",
-    "cosx_SCL_norm = fugi.normalise_matrix(cosx_SCL,normtype=2) # z values normalise to number of event"
+    "\n",
+    "if fileSCL and fileSCR is not None:\n",
+    "    MFPAD_SCR_norm = fugi.normalise_matrix(MFPAD_SCR,normtype=2) # z values normalise to number of event\n",
+    "    MFPAD_SCL_norm = fugi.normalise_matrix(MFPAD_SCL,normtype=2) # z values normalise to number of event\n",
+    "    cosx_SCR_norm = fugi.normalise_matrix(cosx_SCR,normtype=2) # z values normalise to number of event\n",
+    "    cosx_SCL_norm = fugi.normalise_matrix(cosx_SCL,normtype=2) # z values normalise to number of event"
    ]
   },
   {
@@ -414,17 +424,10 @@
     "    \n",
     "    #sorting\n",
     "    MFPAD_totordered_cos=fugi.sorting_array(MFPAD_totordered, theory=False, a=1)\n",
-    "    MFPAD_totordered_phi=fugi.sorting_array(MFPAD_totordered, theory=False, a=2) #equal to the original!"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#PECD check it is equal to contrast\n",
-    "mPECD = np.divide(np.subtract(MFPAD_RCLCR_sum,MFPAD_SCLCR_sum),np.add(MFPAD_RCLCR_sum,MFPAD_SCLCR_sum))"
+    "    MFPAD_totordered_phi=fugi.sorting_array(MFPAD_totordered, theory=False, a=2) #equal to the original!\n",
+    "\n",
+    "    #PECD check it is equal to contrast\n",
+    "    mPECD = np.divide(np.subtract(MFPAD_RCLCR_sum,MFPAD_SCLCR_sum),np.add(MFPAD_RCLCR_sum,MFPAD_SCLCR_sum))"
    ]
   },
   {
@@ -458,72 +461,6 @@
     "print(counts)\n",
     "#check the reshape(6,12,-1)\n",
     "cosphi_adj_cos.reshape(6,12,-1)[:13]\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig,ax= plt.subplots(1, figsize=(12, 10))\n",
-    "cs=ax.contourf(phiM,cosM,fugi.normalise_matrix(MFPAD_SCL_sum,normtype=2).T, cmap=cmap_temp, levels=20)\n",
-    "ax.set_title(\"SCR tot MFPAD norm 2\")\n",
-    "\n",
-    "aspect=(phiM.max()/cosM.max())\n",
-    "ax.set_xlabel('phi [DEG]')\n",
-    "ax.set_ylabel('cos(theta) [adm]')\n",
-    "cbar = fig.colorbar(cs,extend='both',shrink=0.9, ax=ax)\n",
-    "cbar.set_ticklabels([\"min\",\"max\"])\n",
-    "cbar.set_ticks([fugi.normalise_matrix(MFPAD_SCL_sum,normtype=2).min(),fugi.normalise_matrix(MFPAD_SCL_sum,normtype=2).max()])\n",
-    "cbar.ax.set_ylabel('normalised counts')\n",
-    "ax.set_aspect(aspect)\n",
-    "\n",
-    "fig.savefig('../PYTHON_graphs/OUTPUTS/SCR_MFPAD_single_exp.png', figsize=(50, 24), dpi=144, transparent=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig,ax= plt.subplots(1, figsize=(12, 10))\n",
-    "cs=ax.contourf(phiM,cosM,MFPAD_tot_sum.T, cmap=cmap_temp, levels=20)\n",
-    "ax.set_title(\"SCR tot MFPAD norm 2\")\n",
-    "\n",
-    "aspect=(phiM.max()/cosM.max())\n",
-    "ax.set_xlabel('phi [DEG]')\n",
-    "ax.set_ylabel('cos(theta) [adm]')\n",
-    "cbar = fig.colorbar(cs,extend='both',shrink=0.9, ax=ax)\n",
-    "cbar.set_ticklabels([\"min\",\"max\"])\n",
-    "cbar.set_ticks([MFPAD_tot_sum.min(),MFPAD_tot_sum.max()])\n",
-    "cbar.ax.set_ylabel('normalised counts')\n",
-    "ax.set_aspect(aspect)\n",
-    "\n",
-    "fig.savefig('../PYTHON_graphs/OUTPUTS/SCR_MFPAD_single_exp.png', figsize=(50, 24), dpi=144, transparent=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig,ax= plt.subplots(1, figsize=(12, 10))\n",
-    "cs=ax.contourf(phiM,cosM,MFPAD_tottest, cmap=cmap_temp, levels=20)\n",
-    "ax.set_title(\"total MFPAD KIlian norm\")\n",
-    "\n",
-    "aspect=(phiM.max()/cosM.max())\n",
-    "ax.set_xlabel('phi [DEG]')\n",
-    "ax.set_ylabel('cos(theta) [adm]')\n",
-    "cbar = fig.colorbar(cs,extend='both',shrink=0.9, ax=ax)\n",
-    "cbar.set_ticklabels([\"min\",\"max\"])\n",
-    "cbar.set_ticks([MFPAD_tottest.min(),MFPAD_tottest.max()])\n",
-    "cbar.ax.set_ylabel('normalised counts')\n",
-    "ax.set_aspect(aspect)\n",
-    "\n",
-    "fig.savefig('../PYTHON_graphs/OUTPUTS/total_MFPAD_kilian_exp.png', figsize=(50, 24), dpi=144, transparent=False)"
    ]
   },
   {
@@ -602,7 +539,7 @@
     "fig, axes = plt.subplots(6,12, figsize=(25, 12), dpi=40, sharex='col', sharey='row')\n",
     "\n",
     "#NOTE for phi ordered the scannig order of axis has to be inverted\n",
-    "for i,ax in zip(range(72),axes.T.revel()) :\n",
+    "for i,ax in zip(range(72),axes.T.ravel()) :\n",
     "    ax.contourf(phiM,cosM,MFPAD_totordered_phi[i].T)\n",
     "    ax.tick_params(labelsize=12)\n",
     "    ax.text(0, 0, cosphi_adj_phi[i].T, ha=\"center\", va=\"center\", color=\"red\",fontsize=12)\n",
@@ -621,7 +558,7 @@
     "#fig, axes = plt.subplots(6,12, figsize=(50, 24), sharex='col', sharey='row')\n",
     "fig, axes = plt.subplots(6,12, figsize=(25, 12), dpi=40, sharex='col', sharey='row')\n",
     "\n",
-    "for i,ax in zip(range(72),axes.rvel()) :\n",
+    "for i,ax in zip(range(72),axes.ravel()) :\n",
     "    ax.contourf(phiM,cosM,MFPAD_SCR_cos[i].T)\n",
     "    ax.tick_params(labelsize=12)\n",
     "    #ax.text(0, 0, cosphi_adj_cos[i].T, ha=\"center\", va=\"center\", color=\"red\",fontsize=12)\n",
@@ -776,6 +713,134 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#fig, axes = plt.subplots(6,12, figsize=(50, 24), sharex='col', sharey='row')\n",
+    "fig, axes = plt.subplots(6,12, figsize=(25, 12), dpi=40, sharex='col', sharey='row')\n",
+    "\n",
+    "#NOTE for phi ordered the scannig order of axis has to be inverted\n",
+    "for i,ax in zip(range(72),axes.ravel()) :\n",
+    "    ax.contourf(phiM,cosM,MFPAD_SCRtest[i].T)\n",
+    "    ax.tick_params(labelsize=12)\n",
+    "    #ax.text(0, 0, cosphi_adj_phi[i].T, ha=\"center\", va=\"center\", color=\"red\",fontsize=12)\n",
+    "\n",
+    "fugi.overlaygraph(fig)\n",
+    "# fig.savefig(\"../PYTHON_graphs/OUTPUTS/MFPAD_\"+ch+\"_RCL_cos_exp.png\", figsize=(50, 24), dpi=144, transparent=False)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#fig, axes = plt.subplots(6,12, figsize=(50, 24), sharex='col', sharey='row')\n",
+    "fig, axes = plt.subplots(6,12, figsize=(25, 12), dpi=40, sharex='col', sharey='row')\n",
+    "\n",
+    "#NOTE for phi ordered the scannig order of axis has to be inverted\n",
+    "for i,ax in zip(range(72),axes.ravel()) :\n",
+    "    ax.contourf(phiM,cosM,MFPAD_SCR[i].T)\n",
+    "    ax.tick_params(labelsize=12)\n",
+    "    #ax.text(0, 0, cosphi_adj_phi[i].T, ha=\"center\", va=\"center\", color=\"red\",fontsize=12)\n",
+    "\n",
+    "fugi.overlaygraph(fig)\n",
+    "# fig.savefig(\"../PYTHON_graphs/OUTPUTS/MFPAD_\"+ch+\"_RCL_cos_exp.png\", figsize=(50, 24), dpi=144, transparent=False)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig,ax= plt.subplots(1, figsize=(12, 10))\n",
+    "cs=ax.contourf(phiM,cosM,MFPAD_SCRtest_sum, cmap=cmap_temp, levels=20)\n",
+    "ax.set_title(\"SCR tot MFPAD\")\n",
+    "\n",
+    "aspect=(phiM.max()/cosM.max())\n",
+    "ax.set_xlabel('phi [DEG]')\n",
+    "ax.set_ylabel('cos(theta) [adm]')\n",
+    "cbar = fig.colorbar(cs,extend='both',shrink=0.9, ax=ax)\n",
+    "cbar.set_ticklabels([\"min\",\"max\"])\n",
+    "cbar.set_ticks([MFPAD_SCRtest_sum.min(),MFPAD_SCRtest_sum.max()])\n",
+    "cbar.ax.set_ylabel('normalised counts')\n",
+    "ax.set_aspect(aspect)\n",
+    "\n",
+    "fig.savefig('../PYTHON_graphs/OUTPUTS/SCR_MFPAD_singleNONORM_exp.png', figsize=(50, 24), dpi=144, transparent=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig,ax= plt.subplots(1, figsize=(12, 10))\n",
+    "cs=ax.contourf(phiM,cosM,fugi.normalise_matrix(MFPAD_SCL_sum,normtype=2).T, cmap=cmap_temp, levels=20)\n",
+    "ax.set_title(\"SCR tot MFPAD norm 2\")\n",
+    "\n",
+    "aspect=(phiM.max()/cosM.max())\n",
+    "ax.set_xlabel('phi [DEG]')\n",
+    "ax.set_ylabel('cos(theta) [adm]')\n",
+    "cbar = fig.colorbar(cs,extend='both',shrink=0.9, ax=ax)\n",
+    "cbar.set_ticklabels([\"min\",\"max\"])\n",
+    "cbar.set_ticks([fugi.normalise_matrix(MFPAD_SCL_sum,normtype=2).min(),fugi.normalise_matrix(MFPAD_SCL_sum,normtype=2).max()])\n",
+    "cbar.ax.set_ylabel('normalised counts')\n",
+    "ax.set_aspect(aspect)\n",
+    "\n",
+    "fig.savefig('../PYTHON_graphs/OUTPUTS/SCR_MFPAD_single_exp.png', figsize=(50, 24), dpi=144, transparent=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig,ax= plt.subplots(1, figsize=(12, 10))\n",
+    "cs=ax.contourf(phiM,cosM,MFPAD_tot_sum.T, cmap=cmap_temp, levels=20)\n",
+    "ax.set_title(\"SCR tot MFPAD norm 2\")\n",
+    "\n",
+    "aspect=(phiM.max()/cosM.max())\n",
+    "ax.set_xlabel('phi [DEG]')\n",
+    "ax.set_ylabel('cos(theta) [adm]')\n",
+    "cbar = fig.colorbar(cs,extend='both',shrink=0.9, ax=ax)\n",
+    "cbar.set_ticklabels([\"min\",\"max\"])\n",
+    "cbar.set_ticks([MFPAD_tot_sum.min(),MFPAD_tot_sum.max()])\n",
+    "cbar.ax.set_ylabel('normalised counts')\n",
+    "ax.set_aspect(aspect)\n",
+    "\n",
+    "fig.savefig('../PYTHON_graphs/OUTPUTS/SCR_MFPAD_single_exp.png', figsize=(50, 24), dpi=144, transparent=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig,ax= plt.subplots(1, figsize=(12, 10))\n",
+    "cs=ax.contourf(phiM,cosM,MFPAD_tottest, cmap=cmap_temp, levels=20)\n",
+    "ax.set_title(\"total MFPAD KIlian norm\")\n",
+    "\n",
+    "aspect=(phiM.max()/cosM.max())\n",
+    "ax.set_xlabel('phi [DEG]')\n",
+    "ax.set_ylabel('cos(theta) [adm]')\n",
+    "cbar = fig.colorbar(cs,extend='both',shrink=0.9, ax=ax)\n",
+    "cbar.set_ticklabels([\"min\",\"max\"])\n",
+    "cbar.set_ticks([MFPAD_tottest.min(),MFPAD_tottest.max()])\n",
+    "cbar.ax.set_ylabel('normalised counts')\n",
+    "ax.set_aspect(aspect)\n",
+    "\n",
+    "fig.savefig('../PYTHON_graphs/OUTPUTS/total_MFPAD_kilian_exp.png', figsize=(50, 24), dpi=144, transparent=False)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -822,22 +887,34 @@
    "outputs": [],
    "source": [
     "#this can be all added togheter to create the total sum\n",
-    "fig,ax = plt.subplots(2,2, figsize=(10, 10))\n",
-    "cs1=ax[0][0].contourf(phiM,cosM,MFPAD_RCR_sum.T)\n",
+    "fig,ax = plt.subplots(2,2, figsize=(15, 15), sharex=True, sharey=True)\n",
+    "aspect=(phiM.max()/cosM.max())\n",
+    "\n",
+    "cs1=ax[0][0].contourf(phiM,cosM,MFPAD_RCR_sum.T,cmap=cmap_temp)\n",
     "ax[0][0].set_title(\"MFPAD RCR\")\n",
-    "fig.colorbar(cs1, extend='both', shrink=0.9, ax=ax[0][0])\n",
+    "ax[0][0].set_ylabel('cos(theta) [adm]')\n",
+    "# fig.colorbar(cs1, extend='both', shrink=0.9, ax=ax[0][0])\n",
+    "ax[0][0].set_aspect(aspect)\n",
     "\n",
-    "cs2=ax[0][1].contourf(phiM,cosM,MFPAD_SCR_flip_sum.T)\n",
+    "cs2=ax[0][1].contourf(phiM,cosM,MFPAD_SCR_flip_sum.T,cmap=cmap_temp)\n",
     "ax[0][1].set_title(\"MFPAD SCR_flip\")\n",
-    "fig.colorbar(cs2,extend='both', shrink=0.9, ax=ax[0][1])\n",
+    "# fig.colorbar(cs2,extend='both', shrink=0.9, ax=ax[0][1])\n",
+    "ax[0][1].set_aspect(aspect)\n",
     "\n",
-    "cs3=ax[1][0].contourf(phiM,cosM,MFPAD_RCL_sum.T)\n",
+    "cs3=ax[1][0].contourf(phiM,cosM,MFPAD_RCL_sum.T,cmap=cmap_temp)\n",
     "ax[1][0].set_title(\"MFPAD RCL\")\n",
-    "fig.colorbar(cs3,extend='both', shrink=0.9, ax=ax[1][0])\n",
+    "ax[1][0].set_xlabel('phi [DEG]')\n",
+    "ax[1][0].set_ylabel('cos(theta) [adm]')\n",
+    "# fig.colorbar(cs3,extend='both', shrink=0.9, ax=ax[1][0])\n",
+    "ax[1][0].set_aspect(aspect)\n",
     "\n",
-    "cs4=ax[1][1].contourf(phiM,cosM,MFPAD_SCL_flip_sum.T)\n",
+    "cs4=ax[1][1].contourf(phiM,cosM,MFPAD_SCL_flip_sum.T,cmap=cmap_temp)\n",
     "ax[1][1].set_title(\"MFPAD SCL_flip\")\n",
-    "fig.colorbar(cs4,extend='both', shrink=0.9, ax=ax[1][1])"
+    "ax[1][1].set_xlabel('phi [DEG]')\n",
+    "# fig.colorbar(cs4,extend='both', shrink=0.9, ax=ax[1][1])\n",
+    "ax[1][1].set_aspect(aspect)\n",
+    "\n",
+    "fig.savefig('../PYTHON_graphs/OUTPUTS/single_MFPAD_sum_test_exp.png', figsize=(50, 24), dpi=144, transparent=False)"
    ]
   },
   {
@@ -846,10 +923,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig,(ax1)= plt.subplots(1, figsize=(10, 10))\n",
-    "cs1=ax1.contourf(phiM,cosM,MFPAD_tot_sum.T, levels=15)\n",
-    "ax1.set_title(\"MFPAD tot enant\")\n",
-    "fig.colorbar(cs1,extend='both', shrink=0.9, ax=ax1)"
+    "fig,ax= plt.subplots(1, figsize=(12, 10))\n",
+    "cs=ax.contourf(phiM,cosM,MFPAD_tot_sum.T, cmap=cmap_temp, levels=15)\n",
+    "ax.set_title(\"MFPAD tot single sum\")\n",
+    "\n",
+    "aspect=(phiM.max()/cosM.max())\n",
+    "ax.set_xlabel('phi [DEG]')\n",
+    "ax.set_ylabel('cos(theta) [adm]')\n",
+    "cbar = fig.colorbar(cs,extend='both',shrink=0.9, ax=ax)\n",
+    "cbar.set_ticklabels([\"min\",\"max\"])\n",
+    "cbar.set_ticks([MFPAD_tot_sum.min(),MFPAD_tot_sum.max()])\n",
+    "cbar.ax.set_ylabel('normalised counts')\n",
+    "ax.set_aspect(aspect)\n",
+    "\n",
+    "fig.savefig('../PYTHON_graphs/OUTPUTS/totalMFPAD_singlesum_exp.png', figsize=(50, 24), dpi=144, transparent=False)"
    ]
   },
   {
@@ -876,7 +963,7 @@
     "                    colorbar=dict(x=1.0, xanchor='left', thickness=10)),\n",
     "    # showlegend=False,\n",
     "    autosize=False,\n",
-    "    width=1500,\n",
+    "    width=1550,\n",
     "    height=450,\n",
     "    margin=dict(l=5,r=5,b=25,t=25)\n",
     "    )\n",
@@ -890,10 +977,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig,(ax1)= plt.subplots(1, figsize=(10, 10))\n",
-    "cs1=ax1.contourf(phiM,cosM,mPECD.T, cmap=cmap_temp, levels=15)\n",
-    "ax1.set_title(\"Contrast map\")\n",
-    "fig.colorbar(cs1,extend='both', shrink=0.9, ax=ax1)"
+    "fig,ax= plt.subplots(1, figsize=(12, 10))\n",
+    "cs=ax.contourf(phiM,cosM,mPECD.T, cmap=cmap_temp, levels=20)\n",
+    "ax.set_title(\"contrast map\")\n",
+    "\n",
+    "aspect=(phiM.max()/cosM.max())\n",
+    "ax.set_xlabel('phi [DEG]')\n",
+    "ax.set_ylabel('cos(theta) [adm]')\n",
+    "cbar = fig.colorbar(cs,extend='both',shrink=0.9, ax=ax)\n",
+    "# cbar.set_ticklabels([\"min\",\"max\"])\n",
+    "# cbar.set_ticks([totMFPAD.min(),totMFPAD.max()])\n",
+    "cbar.ax.set_ylabel('% of asymmetry')\n",
+    "ax.set_aspect(aspect)\n",
+    "\n",
+    "fig.savefig('../PYTHON_graphs/OUTPUTS/contrastmap_singlesum_exp.png', figsize=(50, 24), dpi=144, transparent=False)"
    ]
   },
   {
