paths modification adding o the 3D files the 72MFPAD code adding right out format figure if for S files to copute R enentiomers faster

--- a/contrast_map_CH11.ipynb
+++ b/contrast_map_CH11.ipynb
@@ -41,23 +41,16 @@
     "#to see which classes have been defined so far\n",
     "[modname for importer, modname, ispkg in pkgutil.walk_packages(uproot_methods.classes.__path__)]\n",
     "\n",
-    "path = \"angular_distr_el/CH11/ID_ALL_mol_e0_valid/EN_gate/\"\n",
-    "dirs = [\"MFPADs_multinew\",\"MFPADs_multinew_std\",\"MFPADs_multinew_flipped\",\"MFPADs_CH_VECTOR\",\"MFPADs_CH_VECTOR_flipped\"]\n",
-    "MFPAD_dirs = [\"MFPADs_multinew_check\",\"MFPAD_e_MF_check\",\"MFPAD_e_MF_mix\",]\n",
-    "\n",
-    "#specific for contrast maps\n",
-    "loc=path+MFPAD_dirs[0]+\"/MFPAD_ALLdir_multinew_usr\"\n",
-    "\n",
     "###550eV - 11.5eV CH11\n",
     "##update nov Kilian binning (36,18)\n",
-    "fileRCR = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/R-C3H3F3O_CH11_550eV_CR_Knov.root\");en=\"550eV\";CH=\"CH11\";\n",
-    "fileRCL = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/R-C3H3F3O_CH11_550eV_CL_Knov.root\")\n",
-    "fileSCR = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/S-C3H3F3O_CH11_550eV_CR_Knov.root\")\n",
-    "fileSCL = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/S-C3H3F3O_CH11_550eV_CL_Knov.root\")\n",
+    "# fileRCR = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/R-C3H3F3O_CH11_550eV_CR_Knov.root\");en=\"550eV\";CH=\"CH11\";\n",
+    "# fileRCL = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/R-C3H3F3O_CH11_550eV_CL_Knov.root\")\n",
+    "# fileSCR = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/S-C3H3F3O_CH11_550eV_CR_Knov.root\")\n",
+    "# fileSCL = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/S-C3H3F3O_CH11_550eV_CL_Knov.root\")\n",
     "\n",
-    "##546eV - 8.2eV CH11\n",
-    "#fileRCR = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/R-C3H3F3O_546eV_CR_10800-2350ns_multiCH11.root\");en=\"546eV\";CH=\"CH11\";\n",
-    "#fileRCL = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/R-C3H3F3O_546eV_CL_10800-2350ns_multiCH11.root\")\n",
+    "#546eV - 8.2eV CH11\n",
+    "# fileRCR = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/R-C3H3F3O_546eV_CR_10800-2350ns_multiCH11.root\");en=\"546eV\";CH=\"CH11\";\n",
+    "# fileRCL = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/R-C3H3F3O_546eV_CL_10800-2350ns_multiCH11.root\")\n",
     "\n",
     "#544eV - 6.1eV CH11\n",
     "# fileRCR = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/R-C3H3F3O_544.5eV_CR_9600-3700ns_multiCH11.root\");en=\"544eV\";CH=\"CH11\";\n",
@@ -68,9 +61,17 @@
     "# fileRCL = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/R-C3H3F3O_542.5eV_CL_10800-2350ns_COMBI_multiCH11.root\")\n",
     "\n",
     "#541eV 3eV CH11\n",
-    "# fileRCR = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/R-C3H3F3O_541.5eV_CR_10800-2350ns_multiCH11.root\");en=\"541eV\";CH=\"CH11\";\n",
-    "# fileRCL = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/R-C3H3F3O_541.5eV_CL_10800-2350ns_multiCH11.root\")\n",
+    "fileRCR = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/R-C3H3F3O_541.5eV_CR_10800-2350ns_multiCH11.root\");en=\"541eV\";CH=\"CH11\";\n",
+    "fileRCL = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/R-C3H3F3O_541.5eV_CL_10800-2350ns_multiCH11.root\")\n",
     "\n",
+    "#Select between CH9 and CH11\n",
+    "path = \"angular_distr_el/\"+CH+\"/\"\n",
+    "\n",
+    "#move first the ID you need\n",
+    "IDs = [\"ID_ALL_mol_e0_valid/EN_gate/\",\"ID1_mol_e0_valid/EN_gate/\",\"ID2_mol_e0_valid/EN_gate/\",\"ID3_mol_e0_valid/EN_gate/\"]\n",
+    "dirs = [\"MFPADs_multinew\",\"MFPADs_multinew_phi\"]\n",
+    "\n",
+    "loc=path+IDs[0]+dirs[0]+\"/MFPAD_ALLdir_multinew_usr\"\n",
     "\n",
     "#new uproot4\n",
     "# https://uproot.readthedocs.io/en/latest/basic.html\n",
@@ -197,11 +198,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "totMFPAD\n",
+    "np.sum(r_nhistRCR)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "if fileSCL and fileSCR is not None:\n",
     "    fig,(ax1,ax2)= plt.subplots(1,2, figsize=(25, 10), sharey=True)\n",
     "    aspect=(phiM.max()/cosM.max())\n",
     "    cs1=ax1.contourf(phiM,cosM,r_norm_nhistSCL.T, cmap=cmap_temp, levels=15)\n",
-    "    ax1.set_title(\"MFPAD SCL\")\n",
+    "    ax1.set_title(\"MFPAD SCL \"+CH+\"_\"+en)\n",
     "    ax1.set_xlabel('phi [DEG]')\n",
     "    ax1.set_ylabel('cos(theta) [adm]')\n",
     "    ax1.set_aspect(aspect)\n",
@@ -211,7 +222,7 @@
     "    \n",
     "    \n",
     "    cs2=ax2.contourf(phiM,cosM,r_norm_nhistSCL_flip.T,cmap=cmap_temp,levels=15)\n",
-    "    ax2.set_title(\"MFPAD SCL_flip\")\n",
+    "    ax2.set_title(\"MFPAD SCL_flip \"+CH+\"_\"+en)\n",
     "    ax2.set_xlabel('phi [DEG]')\n",
     "    ax2.set_ylabel('cos(theta) [adm]')\n",
     "    ax2.set_aspect(aspect)\n",
@@ -233,7 +244,7 @@
     "    fig,(ax1,ax2)= plt.subplots(1,2, figsize=(25, 10), sharey=True)\n",
     "    aspect=(phiM.max()/cosM.max())\n",
     "    cs1=ax1.contourf(phiM,cosM,r_norm_nhistSCR.T, cmap=cmap_temp, levels=15)\n",
-    "    ax1.set_title(\"MFPAD SCR norm 0\")\n",
+    "    ax1.set_title(\"MFPAD SCR n0 \"+CH+\"_\"+en)\n",
     "    ax1.set_xlabel('phi [DEG]')\n",
     "    ax1.set_ylabel('cos(theta) [adm]')\n",
     "    ax1.set_aspect(aspect)\n",
@@ -243,7 +254,7 @@
     "\n",
     "\n",
     "    cs2=ax2.contourf(phiM,cosM,r_norm_nhistSCL.T,cmap=cmap_temp,levels=15)\n",
-    "    ax2.set_title(\"MFPAD SCL norm 0\")\n",
+    "    ax2.set_title(\"MFPAD SCL n0 \"+CH+\"_\"+en)\n",
     "    ax2.set_xlabel('phi [DEG]')\n",
     "    ax2.set_ylabel('cos(theta) [adm]')\n",
     "    ax2.set_aspect(aspect)\n",
@@ -265,7 +276,7 @@
     "fig,(ax1,ax2)= plt.subplots(1,2, figsize=(25, 10), sharey=True)\n",
     "aspect=(phiM.max()/cosM.max())\n",
     "cs1=ax1.contourf(phiM,cosM,r_norm_nhistRCR.T, cmap=cmap_temp, levels=15)\n",
-    "ax1.set_title(\"MFPAD RCR norm 0\")\n",
+    "ax1.set_title(\"MFPAD RCR n0 \"+CH+\"_\"+en)\n",
     "ax1.set_xlabel('phi [DEG]')\n",
     "ax1.set_ylabel('cos(theta) [adm]')\n",
     "ax1.set_aspect(aspect)\n",
@@ -275,7 +286,7 @@
     "\n",
     "\n",
     "cs2=ax2.contourf(phiM,cosM,r_norm_nhistRCL.T,cmap=cmap_temp,levels=15)\n",
-    "ax2.set_title(\"MFPAD RCL norm 0\")\n",
+    "ax2.set_title(\"MFPAD RCL n0 \"+CH+\"_\"+en)\n",
     "ax2.set_xlabel('phi [DEG]')\n",
     "ax2.set_ylabel('cos(theta) [adm]')\n",
     "ax2.set_aspect(aspect)\n",
@@ -305,7 +316,7 @@
    "source": [
     "fig,ax= plt.subplots(1, figsize=(12, 10))\n",
     "cs=ax.contourf(phiM,cosM,totMFPAD.T, cmap=cmap_temp, levels=20)\n",
-    "ax.set_title(\"total MFPAD\")\n",
+    "ax.set_title(\"MFPAD tot \"+CH+\"_\"+en)\n",
     "\n",
     "aspect=(phiM.max()/cosM.max())\n",
     "ax.set_xlabel('phi [DEG]')\n",
@@ -316,7 +327,7 @@
     "cbar.ax.set_ylabel('normalised counts')\n",
     "ax.set_aspect(aspect)\n",
     "\n",
-    "fig.savefig(\"../PYTHON_graphs/OUTPUTS/totalMFPAD_\"+CH+\"_\"+en+\"_exp.png\", figsize=(50, 24), dpi=144, transparent=False)"
+    "fig.savefig(\"../PYTHON_graphs/OUTPUTS/total_MFPAD_\"+CH+\"_\"+en+\"_exp.png\", figsize=(50, 24), dpi=144, transparent=False)"
    ]
   },
   {
@@ -328,7 +339,7 @@
     "if fileSCL and fileSCR is not None:\n",
     "    fig,ax= plt.subplots(1, figsize=(12, 10))\n",
     "    cs=ax.contourf(phiM,cosM,mPECD_norm.T, cmap=cmap_temp)#, levels=24)\n",
-    "    ax.set_title(\"contrast map\")\n",
+    "    ax.set_title(\"contrast map \"+CH+\"_\"+en)\n",
     "    \n",
     "    aspect=(phiM.max()/cosM.max())\n",
     "    ax.set_xlabel('phi [DEG]')\n",
@@ -366,7 +377,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.5-final"
   }
  },
  "nbformat": 4,
