--- a/contrast_map_CH9.ipynb
+++ b/contrast_map_CH9.ipynb
@@ -42,34 +42,34 @@
     "[modname for importer, modname, ispkg in pkgutil.walk_packages(uproot_methods.classes.__path__)]\n",
     "\n",
     "##550eV - 11.5eV CH9\n",
-    "#update nov Kilian binning (36,18)\n",
-    "fileRCR = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/R-C3H3F3O_CH9_550eV_CR_Knov.root\");en=\"550eV\";CH=\"CH9\";\n",
-    "fileRCL = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/R-C3H3F3O_CH9_550eV_CL_Knov.root\")\n",
-    "fileSCR = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/S-C3H3F3O_CH9_550eV_CR_Knov.root\")\n",
-    "fileSCL = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/S-C3H3F3O_CH9_550eV_CL_Knov.root\")\n",
+    "# # update nov Kilian binning (36,18)\n",
+    "# fileRCR = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/R-C3H3F3O_CH9_550eV_CR_Knov.root\");en=\"550eV\";CH=\"CH9\";\n",
+    "# fileRCL = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/R-C3H3F3O_CH9_550eV_CL_Knov.root\")\n",
+    "# fileSCR = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/S-C3H3F3O_CH9_550eV_CR_Knov.root\")\n",
+    "# fileSCL = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/S-C3H3F3O_CH9_550eV_CL_Knov.root\")\n",
     "\n",
     "# #546eV - 8.2eV CH9\n",
     "# fileRCR = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/R-C3H3F3O_546eV_CR_9600-3700ns_multiCH9.root\");en=\"546eV\";CH=\"CH9\";\n",
     "# fileRCL = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/R-C3H3F3O_546eV_CL_9600-3700ns_multiCH9.root\")\n",
     "\n",
-    "# # 544eV - 6.1eV CH9\n",
+    "#544eV - 6.1eV CH9\n",
     "# fileRCR = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/R-C3H3F3O_544.5eV_CR_9600-3700ns_multiCH9.root\");en=\"544eV\";CH=\"CH9\";\n",
     "# fileRCL = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/R-C3H3F3O_544.5eV_CL_9600-3700ns_multiCH9.root\")\n",
     "\n",
-    "# # 542eV - 4eV CH9\n",
+    "#542eV - 4eV CH9\n",
     "# fileRCR = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/R-C3H3F3O_542.5eV_CR_9600-3700ns_COMBI_multiCH9.root\");en=\"542eV\";CH=\"CH9\";\n",
     "# fileRCL = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/R-C3H3F3O_542.5eV_CL_9600-3700ns_COMBI_multiCH9.root\")\n",
     "\n",
-    "# #541eV 3eV CH9\n",
-    "# fileRCR = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/R-C3H3F3O_541.5eV_CR_9600-3700ns_multiCH9.root\");en=\"541eV\";CH=\"CH9\";\n",
-    "# fileRCL = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/R-C3H3F3O_541.5eV_CL_9600-3700ns_multiCH9.root\")\n",
+    "#541eV 3eV CH9\n",
+    "fileRCR = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/R-C3H3F3O_541.5eV_CR_9600-3700ns_multiCH9.root\");en=\"541eV\";CH=\"CH9\";\n",
+    "fileRCL = uproot.open(r\"../PYTHON_graphs/DATA/Experiments/R-C3H3F3O_541.5eV_CL_9600-3700ns_multiCH9.root\")\n",
     "\n",
     "#Select between CH9 and CH11\n",
     "path = \"angular_distr_el/\"+CH+\"/\"\n",
     "\n",
     "#move first the ID you need\n",
     "IDs = [\"ID_ALL_mol_e0_valid/EN_gate/\",\"ID1_mol_e0_valid/EN_gate/\",\"ID2_mol_e0_valid/EN_gate/\",\"ID3_mol_e0_valid/EN_gate/\"]\n",
-    "dirs = [\"MFPADs_multinew\",\"MFPADs_multinew_phi\"]\n",
+    "dirs = [\"MFPADs_multinew/\",\"MFPADs_multinew_phi/\"]\n",
     "\n",
     "loc=path+IDs[0]+dirs[0]+\"/MFPAD_ALLdir_multinew_usr\"\n",
     "\n",
@@ -142,6 +142,8 @@
     "\n",
     "totR = np.add(r_nhistRCL,r_nhistRCR)\n",
     "totR_norm = np.add(r_norm_nhistRCL,r_norm_nhistRCR)\n",
+    "#sum the helicities and flip along cos(theta)\n",
+    "totRf_norm = np.flip(totR_norm,axis=1)\n",
     "\n",
     "if fileSCL and fileSCR is not None:\n",
     "\n",
@@ -169,15 +171,16 @@
     "\n",
     "    #contrast map R-S enantiomer: NORMALISED\n",
     "    mPECD_norm = np.divide(np.subtract(totR_norm,totS_norm),np.add(totR_norm,totS_norm))\n",
-    "    mPECD_smooth = fugi.smoothgauss(totSf,0.3,0.6)\n",
-    "\n",
-    "    mPECDf_norm = np.divide(np.subtract(totR_norm,totSf_norm),np.add(totR_norm,totSf_norm))\n",
-    "    mPECDf_smooth = fugi.smoothgauss(totSf,0.3,0.6)\n",
+    "    mPECD_smooth = fugi.smoothgauss(mPECD_norm,0.3,0.6)\n",
     "\n",
     "else:\n",
     "    #NOTE no contrast map without the second enantiomer. Maybe one can flip one to simulated it?\n",
     "    #sum all MFPAD\n",
     "    totMFPAD=totR\n",
+    "\n",
+    "    mPECD_norm = np.divide(np.subtract(totR_norm,totRf_norm),np.add(totR_norm,totRf_norm))\n",
+    "    mPECD_smooth = fugi.smoothgauss(mPECD_norm,0.3,0.6)\n",
+    "\n",
     "\n",
     "cosM = (costheta_nhistRCL[1:] + costheta_nhistRCL[:-1])/2\n",
     "phiM = (phi_nhistRCL[1:] + phi_nhistRCL[:-1])/2\n",
@@ -326,21 +329,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if fileSCL and fileSCR is not None:\n",
-    "    fig,ax= plt.subplots(1, figsize=(12, 10))\n",
-    "    cs=ax.contourf(phiM,cosM,mPECD_norm.T, cmap=cmap_temp)#, levels=24)\n",
-    "    ax.set_title(\"contrast map \"+CH+\"_\"+en)\n",
-    "    \n",
-    "    aspect=(phiM.max()/cosM.max())\n",
-    "    ax.set_xlabel('phi [DEG]')\n",
-    "    ax.set_ylabel('cos(theta) [adm]')\n",
-    "    cbar = fig.colorbar(cs,extend='both',shrink=0.9, ax=ax)\n",
-    "    # cbar.set_ticklabels([\"min\",\"max\"])\n",
-    "    # cbar.set_ticks([mPECD_norm.min(),mPECD_norm.max()])\n",
-    "    cbar.ax.set_ylabel(\"% of assymetry\")\n",
-    "    ax.set_aspect(aspect)\n",
-    "    \n",
-    "    fig.savefig(\"../PYTHON_graphs/OUTPUTS/contrastmap_R-S_\"+CH+\"_\"+en+\"_exp.png\", figsize=(50, 24), dpi=144, transparent=False)"
+    "fig,ax= plt.subplots(1, figsize=(12, 10))\n",
+    "cs=ax.contourf(phiM,cosM,mPECD_norm.T, cmap=cmap_temp)#, levels=24)\n",
+    "ax.set_title(\"contrast map \"+CH+\"_\"+en)\n",
+    "\n",
+    "aspect=(phiM.max()/cosM.max())\n",
+    "ax.set_xlabel('phi [DEG]')\n",
+    "ax.set_ylabel('cos(theta) [adm]')\n",
+    "cbar = fig.colorbar(cs,extend='both',shrink=0.9, ax=ax)\n",
+    "# cbar.set_ticklabels([\"min\",\"max\"])\n",
+    "# cbar.set_ticks([mPECD_norm.min(),mPECD_norm.max()])\n",
+    "cbar.ax.set_ylabel(\"% of assymetry\")\n",
+    "ax.set_aspect(aspect)\n",
+    "\n",
+    "fig.savefig(\"../PYTHON_graphs/OUTPUTS/contrastmap_R-S_\"+CH+\"_\"+en+\"_exp.png\", figsize=(50, 24), dpi=144, transparent=False)"
    ]
   },
   {
