update xgo ygo definition remove of 2d rotation

--- a/3D_MFPADs_theory_plotly.ipynb
+++ b/3D_MFPADs_theory_plotly.ipynb
@@ -150,7 +150,6 @@
     "phiM = frame.loc[frame[\"filename\"] == \"1_1\"].iloc[:,0].unique() # phi = [-179.1, 179.1]\n",
     "cosM = frame.loc[frame[\"filename\"] == \"1_1\"].iloc[:,1].unique() # cos(theta) = [1,-1]\n",
     "\n",
-    "\n",
     "#NOTE: for np.MESHGRID:\n",
     "#for the 2D case with inputs of length M and N, the outputs are of shape (N, M) for ‘xy’ indexing and (M, N) for ‘ij’ indexing. Cartesia \"xy\" by default\n",
     "#REMEBER: np.any(phiM == phiMs) -> TRUE\n",
@@ -184,9 +183,8 @@
     "REDUCED=FALSE => ADJUSTED TO THEORY: -1,1,-180,180\n",
     "\"\"\"\n",
     "# fugi = reload(fugi)\n",
-    "\n",
-    "xgo_phi,ygo_phi,cosphi_adj_phi = fugi.create_gocoords(a=0, reduced=True, source=True)\n",
-    "xgo_cos,ygo_cos,cosphi_adj_cos = fugi.create_gocoords(a=1, reduced=True, source=True)\n",
+    "xgo_phi,ygo_phi,cosphi_adj_phi = fugi.create_gocoords(a=0, reduced=False, source=True)\n",
+    "xgo_cos,ygo_cos,cosphi_adj_cos = fugi.create_gocoords(a=1, reduced=False, source=True)\n",
     "\n",
     "# list(zip(xgo_phi,ygo_phi))\n",
     "print(\"(xgo_cos (phi), ygo_cos (ctheta)) \\n\", list(zip(xgo_cos,ygo_cos))[:6])\n",
@@ -281,8 +279,8 @@
     "1_1       1            -180 \n",
     "1_2       1            -147 \n",
     "\"\"\"\n",
-    "cosphi_df_cos = np.around(np.array(list(itertools.product(np.cos(np.linspace(0,np.pi,6).tolist()),np.linspace(-180,180,12).tolist()))),3)\n",
-    "dfind=pd.DataFrame(cosphi_df_cos, columns=[\"ctheta\",\"phi\"])\n",
+    "#NOTE cosphi_adj_cos comes from create_gocoords, therefore can be reduced to meet the experiments, or not\n",
+    "dfind=pd.DataFrame(cosphi_adj_cos, columns=[\"ctheta\",\"phi\"])\n",
     "dfind[\"item\"]=allnames\n",
     "\n",
     "#Sorting the label of the element according to the numerical value of ctheta and phi\n",
@@ -299,9 +297,10 @@
    "source": [
     "# find the photon rotation vakues of a specific set of rotation\n",
     "# where b1 is ma or min!\n",
-    "dfind.sort_values(by=[\"phi\", \"ctheta\"])\n",
+    "# dfind.sort_values(by=[\"phi\", \"ctheta\"])\n",
+    "dfind.sort_values(by=[\"ctheta\",\"phi\"])\n",
     "dfind.loc[dfind[\"item\"] == \"4_7\"]\n",
-    "dfind.loc[dfind[\"phi\"] == -105.]"
+    "dfind.loc[dfind[\"phi\"] == 81.818]"
    ]
   },
   {
@@ -312,7 +311,7 @@
    "source": [
     "#selecting the rght file according to the needs [\"filename\"] == \"x_x\"]\n",
     "#NOTE select S or R depending on the needs. \n",
-    "nitem=36\n",
+    "nitem=32\n",
     "# counts = MFPAD_S_cos_LF[nitem].reshape(-1)\n",
     "# counts = MFPAD_R_cos_LF[nitem].reshape(-1)\n",
     "counts = MFPAD_S_cos[nitem].reshape(-1)"
