--- a/72_2D_MFPADs_theory.ipynb
+++ b/72_2D_MFPADs_theory.ipynb
@@ -41,11 +41,11 @@
     "#loads the temperaure cmap like Philipp for both matpplotlib and plotly\n",
     "cmap_temp, cmap_temp_go, Magma_r, Seismic_r = fugi.customcmaps()\n",
     "\n",
-    "# path = r'../PYTHON_graphs/DATA/Theory/TFMox-S/enant=S_hel=+1_KE=3.0eV';en=\"KE=3eV\";\n",
+    "path = r'../PYTHON_graphs/DATA/Theory/TFMox-S/enant=S_hel=+1_KE=3.0eV';en=\"KE=3eV\";\n",
     "# path = r'../PYTHON_graphs/DATA/Theory/TFMox-S/enant=S_hel=+1_KE=4.0eV';en=\"KE=4eV\";\n",
     "# path = r'../PYTHON_graphs/DATA/Theory/TFMox-S/enant=S_hel=+1_KE=6.1eV';en=\"KE=6.1eV\";\n",
     "# path = r'../PYTHON_graphs/DATA/Theory/TFMox-S/enant=S_hel=+1_KE=8.2eV';en=\"KE=8.2eV\";\n",
-    "path = r'../PYTHON_graphs/DATA/Theory/TFMox-S/enant=S_hel=+1_KE=11.5eV';en=\"KE=11.5eV\";\n",
+    "# path = r'../PYTHON_graphs/DATA/Theory/TFMox-S/enant=S_hel=+1_KE=11.5eV';en=\"KE=11.5eV\";\n",
     "\n",
     "# glob has to be sorted (both in unix and windows)\n",
     "all_files = sorted(glob.glob(path + \"/**.dat\"))\n",
@@ -214,9 +214,8 @@
     "REDUCED=FALSE => ADJUSTED TO THEORY: -1,1,-180,180\n",
     "\"\"\"\n",
     "# fugi = reload(fugi)\n",
-    "\n",
-    "xgo_phi,ygo_phi,cosphi_adj_phi = fugi.create_gocoords(a=0, reduced=True, source=True)\n",
-    "xgo_cos,ygo_cos,cosphi_adj_cos = fugi.create_gocoords(a=1, reduced=True, source=True)\n",
+    "xgo_phi,ygo_phi,cosphi_adj_phi = fugi.create_gocoords(a=0, reduced=False, source=True)\n",
+    "xgo_cos,ygo_cos,cosphi_adj_cos = fugi.create_gocoords(a=1, reduced=False, source=True)\n",
     "\n",
     "# list(zip(xgo_phi,ygo_phi))\n",
     "print(\"(xgo_cos (phi), ygo_cos (ctheta)) \\n\", list(zip(xgo_cos,ygo_cos))[:6])\n",
@@ -243,8 +242,8 @@
     "1_1       1            -180 \n",
     "1_2       1            -147 \n",
     "\"\"\"\n",
-    "cosphi_df_cos = np.around(np.array(list(itertools.product(np.cos(np.linspace(0,np.pi,6).tolist()),np.linspace(-180,180,12).tolist()))),3)\n",
-    "dfind=pd.DataFrame(cosphi_df_cos, columns=[\"ctheta\",\"phi\"])\n",
+    "#NOTE cosphi_adj_cos comes from create_gocoords, therefore can be reduced to meet the experiments, or not\n",
+    "dfind=pd.DataFrame(cosphi_adj_cos, columns=[\"ctheta\",\"phi\"])\n",
     "dfind[\"item\"]=allnames\n",
     "\n",
     "#Sorting the label of the element according to the numerical value of ctheta and phi\n",
@@ -419,6 +418,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#rotation of the photon vector\n",
+    "b=[col[0] for col in cosphi_adj_phi]\n",
+    "c=np.arccos(b)-20*np.pi/180\n",
+    "d=np.cos(c)\n",
+    "a=[col[1]+10 for col in cosphi_adj_phi]\n",
+    "cosphi_adj_phi=list(zip(d,a))\n",
+    "cosphi_adj_phi"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -582,55 +594,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#TEST: rotation in 2D!\n",
-    "fugi = reload(fugi)\n",
-    "tMFPAD_R_cos_LF=[]\n",
-    "\n",
-    "tMFPAD_S_cos_LF=fugi.rot2d_MFPADcv2(MFPAD_S_cos,cosphi_adj_cos)\n",
-    "# tMFPAD_S_cos_LF,tcos_S_cos_LF,tphi_S_cos_LF=fugi.rot2d_MFPAD(MFPAD_S_cos,ctheta_full,phi_full,cosphi_adj_cos,phiMM,cosMM,method=\"linear\")\n",
-    "# tMFPAD_S_cos_LF=(np.nan_to_num(tMFPAD_S_cos_LF,np.nan)).reshape(72,200,100)\n",
-    "\n",
-    "for el in tMFPAD_S_cos_LF:\n",
-    "    tMFPAD_R_cos_LF.append(np.flip(el, axis=0))\n",
-    "\n",
-    "tcosx_S_cos_LF=fugi.projection(tMFPAD_S_cos_LF, alongaxis=0)\n",
-    "tcosx_R_cos_LF=fugi.projection(tMFPAD_R_cos_LF, alongaxis=0)\n",
-    "\n",
-    "tcPECD_LF_cos = np.nan_to_num(np.divide(np.subtract(tcosx_R_cos_LF,tcosx_S_cos_LF),np.add(tcosx_R_cos_LF,tcosx_S_cos_LF)))\n",
-    "terrPECD_LF_cos = np.nan_to_num(np.sqrt(1/(tcosx_R_cos_LF+tcosx_S_cos_LF)))\n",
-    "\n",
-    "tMFPAD_S_cos_LF_sum=np.sum(tMFPAD_S_cos_LF,axis=0)\n",
-    "tMFPAD_R_cos_LF_sum=np.sum(tMFPAD_R_cos_LF,axis=0)\n",
-    "\n",
-    "tmPECD_LF_cos=np.divide(np.subtract(tMFPAD_R_cos_LF,tMFPAD_S_cos_LF),np.add(tMFPAD_R_cos_LF,tMFPAD_S_cos_LF))\n",
-    "tmPECD_LF_cos_sum=np.divide(np.subtract(tMFPAD_R_cos_LF_sum,tMFPAD_S_cos_LF_sum),np.add(tMFPAD_R_cos_LF_sum,tMFPAD_S_cos_LF_sum))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fugi.remap(cosphi_adj_cos,-100,100,-200,200)\n",
-    "MFPAD_S_cos[0].shape\n",
-    "xmap = np.zeros((MFPAD_S_cos[0].shape[0], MFPAD_S_cos[0].shape[1]), np.float32)\n",
-    "xmap.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "#NOTE: after the triangluation one has to use phiMM and cosMM\n",
-    "fig1, ax = plt.subplots(1,3, figsize=(14,5), constrained_layout=True)\n",
+    "fig1, ax = plt.subplots(1,2, figsize=(10,5), constrained_layout=True)\n",
     "# fig1, ax = plt.subplots(constrained_layout=True)\n",
     "\n",
     "# ax[0].contourf(triang,zinterp.reshape(-1))\n",
     "# ax[0].contourf(phiMM,cosMM,MFPAD_S_cos_LF[4].T)\n",
-    "ax[0].contourf(phiMM,cosMM,MFPAD_S_cos[0].T)\n",
+    "ax[0].contourf(phiMM,cosMM,MFPAD_S_cos[71].T)\n",
     "# ax[0].contourf(phiMM,cosMM,MFPAD_S_cos_LF_norm_sum.T)\n",
     "# ax[0].contourf(phiMM, cosMM, MFPAD_temp)\n",
     "# ax[0].contourf(znew.T)\n",
@@ -638,24 +608,10 @@
     "ax[0].set_ylabel('cos(theta) [adm]')\n",
     "ax[0].set_title(\"original\")\n",
     "\n",
-    "ax[1].contourf(phiMM, cosMM, tMFPAD_S_cos_LF[0].T)\n",
-    "# ax[1].contourf(phiMM, cosMM, MFPAD_rot2.T)\n",
-    "# ax[1].contourf(MFPAD_rot2.T)\n",
-    "# ax[1].tricontourf(phi_full.reshape(-1), ctheta_full.reshape(-1), tMFPAD_S_cos_LF[4].reshape(-1))\n",
-    "# ax[1].tricontourf(tphi_S_cos_LF[4].reshape(-1), tcos_S_cos_LF[4].reshape(-1), tMFPAD_S_cos_LF[4].reshape(-1))\n",
-    "# ax[1].contourf(phiMM, cosMM, test[4].T)\n",
-    "# ax[1].tricontourf(tphi_S_cos_LF[4].reshape(-1), tcos_S_cos_LF[4].reshape(-1), tMFPAD_S_cos_LF[4].reshape(-1))\n",
-    "# ax[1].contourf(tphi_S_cos_LF[4], tcos_S_cos_LF[4], tMFPAD_S_cos_LF[4])\n",
-    "# ax[1].contourf(phi_S_cos_LF[4], cos_S_cos_LF[4], MFPAD_S_cos_LF[4])\n",
-    "# ax[1].contourf(phiM, cosM, tMFPAD_S_cos_LF[4].reshape(200,100).T)\n",
+    "ax[1].contourf(phiMM,cosMM,MFPAD_S_cos_LF[71].T)\n",
     "ax[1].set_xlabel('phi [DEG]')\n",
     "ax[1].set_ylabel('cos(theta) [adm]')\n",
-    "ax[1].set_title(\"rot2D in sperical\")\n",
-    "\n",
-    "ax[2].contourf(phiMM,cosMM,MFPAD_S_cos_LF[0].T)\n",
-    "ax[2].set_xlabel('phi [DEG]')\n",
-    "ax[2].set_ylabel('cos(theta) [adm]')\n",
-    "ax[2].set_title(\"rot3D with cartesian\")\n",
+    "ax[1].set_title(\"rot3D with cartesian\")\n",
     "\n",
     "# fig1.savefig('../PYTHON_graphs/OUTPUTS/Till_rotaton.png', figsize=(14,5), dpi=144, constrained_layout=True, transparent=False)"
    ]
@@ -740,8 +696,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# if MFPAD == True:\n",
-    "if MFPAD == False:\n",
+    "if MFPAD == True:\n",
+    "# if MFPAD == False:\n",
     "    #NOTE the MFPAD is described by Philipp witch cos(theta)=[1,-1], phi=[-180,180]\n",
     "    #imshow doesn´t have the x and y grid who inverts the cos(theta), therefore extent is reversed!\n",
     "    #fig2a, axes = plt.subplots(6,12, figsize=(50, 24), sharex='col', sharey='row')\n",
@@ -766,8 +722,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# if MFPAD == True:\n",
-    "if MFPAD == False:\n",
+    "if MFPAD == True:\n",
+    "# if MFPAD == False:\n",
     "    #fig2a, axes = plt.subplots(6,12, figsize=(50, 24), sharex='col', sharey='row')\n",
     "    fig2a, axes = plt.subplots(6,12, figsize=(25, 12), dpi=40, sharex='col', sharey='row')\n",
     "    \n",
@@ -906,8 +862,8 @@
     "custom_xlim = (-1, 1)\n",
     "custom_ylim = (-0.6,0.6) #custom_ylim = (-1,1)\n",
     "\n",
-    "limits=[(-1, 1), (-1, 1), (-1, 1), (-1, 1), (-1, 1), (-1, 1)]\n",
-    "# limits=[(-1, 1), (-1, 1), (None, None), (None, None), (None, None), (None, None)]\n",
+    "# limits=[(-1, 1), (-1, 2), (-1, 1), (-1, 1), (-1, 1), (-1, 1)]\n",
+    "limits=[(-1, 1), (-1, 2), (None, None), (None, None), (None, None), (None, None)]\n",
     "\n",
     "#NOTE for phi ordered the scannig order of axis has to be inverted\n",
     "for i,ax in zip(range(72),axes.T.ravel()):\n",
@@ -936,6 +892,7 @@
    "outputs": [],
    "source": [
     "# fugi = reload(fugi)\n",
+    "#left without imits on purpose\n",
     "fig=fugi.plotgo_single(param_matrix_phi,xgo_phi,ygo_phi,name=\"b1map_phi_LF_\"+en+\"_theory\")\n",
     "fig.show()"
    ]
@@ -948,13 +905,13 @@
    "source": [
     "#lines should be smoothed!\n",
     "fig,ax= plt.subplots(1, figsize=(12, 10))\n",
-    "cs=ax.tricontourf(xgo_phi,ygo_phi,param_matrix_phi[:,0,0], cmap=cmap_temp, levels=20)\n",
+    "cs=ax.tricontourf(xgo_phi,ygo_phi,param_matrix_phi[:,0,0], cmap=cmap_temp, extend=\"both\", levels=20)\n",
     "ax.set_title(\"b1 map \"+en)\n",
     "\n",
     "aspect=(phiM.max()/cosM.max())\n",
     "ax.set_xlabel('phi [DEG]')\n",
     "ax.set_ylabel('cos(theta) [adm]')\n",
-    "cbar = fig.colorbar(cs,extend='both',shrink=0.9, ax=ax)\n",
+    "cbar = fugi.clippedcolorbar(cs,shrink=0.9, ax=ax)\n",
     "# cbar.set_ticklabels([\"min\",\"max\"])\n",
     "# cbar.set_ticks([totMFPAD.min(),totMFPAD.max()])\n",
     "cbar.ax.set_ylabel('% of asymmetry')\n",
@@ -970,8 +927,8 @@
    "outputs": [],
    "source": [
     "# fugi = reload(fugi)\n",
-    "limits=[[-1,1,0.25],[-0.5,0.5,0.1]]\n",
-    "fig=fugi.plotgo_multiple(param_matrix_phi,xgo_phi,ygo_phi,name=\"b1-6map_phi_LF_\"+en+\"_theory\",limits=limits, tweak=True)\n",
+    "#left without limits on purpose\n",
+    "fig=fugi.plotgo_multiple(param_matrix_phi,xgo_phi,ygo_phi,name=\"b1-6map_phi_LF_\"+en+\"_theory\")\n",
     "fig.show()"
    ]
   },
@@ -999,8 +956,8 @@
     "custom_xlim = (-1, 1)\n",
     "custom_ylim = (-0.6,0.6) #custom_ylim = (-1,1)\n",
     "\n",
-    "limits=[(-1, 1), (-1, 1), (-1, 1), (-1, 1), (-1, 1), (-1, 1)]\n",
-    "# limits=[(-1, 1), (-1, 1), (None, None), (None, None), (None, None), (None, None)]\n",
+    "# limits=[(-1, 1), (-1, 2), (-1, 1), (-1, 1), (-1, 1), (-1, 1)]\n",
+    "limits=[(-1, 1), (-1, 2), (None, None), (None, None), (None, None), (None, None)]\n",
     "\n",
     "for i,ax in zip(range(72),axes.ravel()): #fixe because of the photon directions, equal to range(len(cosphi))\n",
     "    #NOTE: x_data has to be monotonicalli INCREASING!\n",
@@ -1029,9 +986,17 @@
    "outputs": [],
    "source": [
     "# fugi = reload(fugi)\n",
-    "fig=fugi.plotgo_single(param_matrix_cos,xgo_cos,ygo_cos,name=\"b1map_cos_LF_\"+en+\"_theory\")\n",
+    "limits=[-0.51,0.51,0.1]\n",
+    "fig=fugi.plotgo_single(param_matrix_cos,xgo_cos,ygo_cos,name=\"b1map_cos_LF_\"+en+\"_theory\",limits=limits)\n",
     "fig.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1041,13 +1006,14 @@
    "source": [
     "#lines should be smoothed!\n",
     "fig,ax= plt.subplots(1, figsize=(12, 10))\n",
-    "cs=ax.tricontourf(xgo_cos,ygo_cos,param_matrix_cos[:,0,0], cmap=cmap_temp, levels=20)\n",
+    "cs=ax.tricontourf(xgo_cos,ygo_cos,param_matrix_cos[:,0,0], vmin=-0.5, vmax=0.5, extend=\"both\",cmap=cmap_temp,levels=20)\n",
     "ax.set_title(\"b1 map \"+en)\n",
     "\n",
     "aspect=(phiM.max()/cosM.max())\n",
     "ax.set_xlabel('phi [DEG]')\n",
     "ax.set_ylabel('cos(theta) [adm]')\n",
-    "cbar = fig.colorbar(cs,extend='both',shrink=0.9, ax=ax)\n",
+    "\n",
+    "cbar = fugi.clippedcolorbar(cs,shrink=0.9, ax=ax)\n",
     "# cbar.set_ticklabels([\"min\",\"max\"])\n",
     "# cbar.set_ticks([totMFPAD.min(),totMFPAD.max()])\n",
     "cbar.ax.set_ylabel('% of asymmetry')\n",
@@ -1063,7 +1029,7 @@
    "outputs": [],
    "source": [
     "fugi = reload(fugi)\n",
-    "limits=[[-1,1,0.25],[-0.5,0.5,0.1]]\n",
+    "limits=[[-1,2,0.25],[-0.5,0.5,0.1]]\n",
     "fig=fugi.plotgo_multiple(param_matrix_cos,xgo_cos,ygo_cos,name=\"b1-6map_cos_LF_\"+en+\"_theory\",limits=limits, tweak=True)\n",
     "fig.show()"
    ]
@@ -1092,8 +1058,8 @@
     "custom_xlim = (-1, 1)\n",
     "custom_ylim = (-0.6,0.6) #custom_ylim = (-1,1)\n",
     "\n",
-    "limits=[(-1, 1), (-1, 1), (-1, 1), (-1, 1), (-1, 1), (-1, 1)]\n",
-    "# limits=[(-1, 1), (-1, 1), (None, None), (None, None), (None, None), (None, None)]\n",
+    "# limits=[(-1, 1), (-1, 2), (-1, 1), (-1, 1), (-1, 1), (-1, 1)]\n",
+    "limits=[(-1, 1), (-1, 2), (None, None), (None, None), (None, None), (None, None)]\n",
     "\n",
     "for i,ax in zip(range(72),axes.ravel()): #fixe because of the photon directions, equal to range(len(cosphi))\n",
     "    #NOTE: x_data has to be monotonicalli INCREASING!\n",
@@ -1133,13 +1099,13 @@
    "source": [
     "#lines should be smoothed!\n",
     "fig,ax= plt.subplots(1, figsize=(12, 10))\n",
-    "cs=ax.tricontourf(xgo_cos,ygo_cos,param_matrix_cos[:,0,0], cmap=cmap_temp, levels=20)\n",
+    "cs=ax.tricontourf(xgo_cos,ygo_cos,param_matrix_cos[:,0,0], cmap=cmap_temp, extend=\"both\", levels=20)\n",
     "ax.set_title(\"b1 map LF \"+en)\n",
     "\n",
     "aspect=(phiM.max()/cosM.max())\n",
     "ax.set_xlabel('phi [DEG]')\n",
     "ax.set_ylabel('cos(theta) [adm]')\n",
-    "cbar = fig.colorbar(cs,extend='both',shrink=0.9, ax=ax)\n",
+    "cbar = fugi.clippedcolorbar(cs,shrink=0.9, ax=ax)\n",
     "# cbar.set_ticklabels([\"min\",\"max\"])\n",
     "# cbar.set_ticks([totMFPAD.min(),totMFPAD.max()])\n",
     "cbar.ax.set_ylabel('% of asymmetry')\n",
@@ -1155,7 +1121,7 @@
    "outputs": [],
    "source": [
     "fugi = reload(fugi)\n",
-    "limits=[[-1,1,0.25],[-0.5,0.5,0.1]]\n",
+    "limits=[[-1,2,0.25],[-0.5,0.5,0.1]]\n",
     "fig=fugi.plotgo_multiple(param_matrix_cos,xgo_cos,ygo_cos,name=\"b1-6map_MF_\"+en+\"_theory\",limits=limits, tweak=True)\n",
     "fig.show()"
    ]
@@ -1203,14 +1169,14 @@
    "outputs": [],
    "source": [
     "fig,ax= plt.subplots(1, figsize=(12, 10))\n",
-    "cs=ax.contourf(phiM,cosM,MFPAD_R_cos_sum.reshape(200,100).T, cmap=cmap_temp)\n",
+    "cs=ax.contourf(phiM,cosM,MFPAD_R_cos_sum.reshape(200,100).T,cmap=cmap_temp)\n",
     "# cs=ax.contourf(phiMM,cosMM,MFPAD_R_cos_sum.reshape.T, cmap=cmap_temp)\n",
     "aspect=(phiMM.max()/cosMM.max())\n",
     "\n",
     "ax.set_title(\"Total MFPAD R \"+en)\n",
     "ax.set_xlabel('phi [DEG]')\n",
     "ax.set_ylabel('cos(theta) [adm]')\n",
-    "cbar=fig.colorbar(cs,extend='both', shrink=0.9, ax=ax)\n",
+    "cbar = fugi.clippedcolorbar(cs,shrink=0.9,ax=ax)\n",
     "cbar.set_ticklabels([\"min\",\"max\"])\n",
     "cbar.set_ticks([MFPAD_R_cos_sum.min(),MFPAD_R_cos_sum.max()])\n",
     "cbar.ax.set_ylabel('normalised counts')\n",
@@ -1233,7 +1199,7 @@
     "ax.set_title(\"Total MFPAD S \"+en)\n",
     "ax.set_xlabel('phi [DEG]')\n",
     "ax.set_ylabel('cos(theta) [adm]')\n",
-    "cbar=fig.colorbar(cs,extend='both', shrink=0.9, ax=ax)\n",
+    "cbar = fugi.clippedcolorbar(cs,shrink=0.9,ax=ax)\n",
     "cbar.set_ticklabels([\"min\",\"max\"])\n",
     "cbar.set_ticks([MFPAD_S_cos_sum.min(),MFPAD_S_cos_sum.max()])\n",
     "cbar.ax.set_ylabel('normalised counts')\n",
@@ -1249,13 +1215,15 @@
    "outputs": [],
    "source": [
     "fig,ax= plt.subplots(1, figsize=(12, 10))\n",
-    "cs=ax.contourf(phiMM,cosMM,mPECD_cos_sum.T, vmin=-0.5, vmax=0.5, cmap=cmap_temp)\n",
+    "cs=ax.contourf(phiMM,cosMM,mPECD_cos_sum.T, vmin=-0.6, vmax=0.6,cmap=cmap_temp)\n",
     "\n",
     "aspect=(phiMM.max()/cosMM.max())\n",
     "ax.set_title(\"contrast map \"+en)\n",
     "ax.set_xlabel('phi [DEG]')\n",
     "ax.set_ylabel('cos(theta) [adm]')\n",
     "cbar=fig.colorbar(cs,extend='both', shrink=0.9, ax=ax)\n",
+    "# cbar = fugi.clippedcolorbar(cs,shrink=0.9,ax=ax) #colorbar get messed up\n",
+    "\n",
     "cbar.ax.set_ylabel('% of asymmetry')\n",
     "\n",
     "ax.set_aspect(aspect)\n",
@@ -1270,13 +1238,14 @@
    "outputs": [],
    "source": [
     "fig,ax= plt.subplots(1, figsize=(12, 10))\n",
-    "cs=ax.contourf(phiMM,cosMM,mPECD_LF_cos_sum.T, vmin=-0.8, vmax=0.8, cmap=cmap_temp)\n",
+    "cs=ax.contourf(phiMM,cosMM,mPECD_LF_cos_sum.T, vmin=-0.8, vmax=0.8,cmap=cmap_temp)\n",
     "\n",
     "aspect=(phiMM.max()/cosMM.max())\n",
     "ax.set_title(\"contrast map LF \"+en)\n",
     "ax.set_xlabel('phi [DEG]')\n",
     "ax.set_ylabel('cos(theta) [adm]')\n",
     "cbar=fig.colorbar(cs,extend='both', shrink=0.9, ax=ax)\n",
+    "# cbar = fugi.clippedcolorbar(cs,shrink=0.9,ax=ax) #colorbar get messed up\n",
     "cbar.ax.set_ylabel('% of asymmetry')\n",
     "\n",
     "ax.set_aspect(aspect)\n",
