implementation of xgo ygo need to rescale for the new data

--- a/3D_MFPADs_CH11_experiment.ipynb
+++ b/3D_MFPADs_CH11_experiment.ipynb
@@ -174,7 +174,10 @@
     "\n",
     "#rearranging the photon vector\n",
     "cosphi_adj_cos=(dfind.sort_values(by=[\"ctheta\", \"phi\"])).values\n",
-    "cosphi_adj_phi=(dfind.sort_values(by=[\"phi\",\"ctheta\"])).values"
+    "cosphi_adj_phi=(dfind.sort_values(by=[\"phi\",\"ctheta\"])).values\n",
+    "\n",
+    "xgo_phi,ygo_phi,cosphi_adj_phic = fugi.create_gocoords(a=0, reduced=True, source=True)\n",
+    "xgo_cos,ygo_cos,cosphi_adj_cosc = fugi.create_gocoords(a=1, reduced=True, source=True)"
    ]
   },
   {
@@ -418,8 +421,8 @@
    "source": [
     "#look to the values in b1 map and found the MFPAD. The phi - cos(theta) grid of light direction id indipendendt from the enantiomer\n",
     "#the number of the element depends on the sorting of the b1 map at which the maximum has been calculated. Usually is phi sorted.\n",
-    "dfind=pd.DataFrame(cosphi_adj_phi, columns=[\"ctheta\",\"phi\"])\n",
-    "dfind.loc[dfind[\"phi\"] == -180]"
+    "dfind=pd.DataFrame(cosphi_photon, columns=[\"ctheta\",\"phi\"])\n",
+    "dfind.loc[dfind[\"phi\"] == 114.545]"
    ]
   },
   {
@@ -613,7 +616,7 @@
     "\n",
     "\n",
     "#load the point cloud\n",
-    "# SMOOTHED\n",
+    "# s = SMOOTHED\n",
     "point_cloud=np.array([xs,ys,zs]).T\n",
     "#Standard\n",
     "# point_cloud=np.array([x,y,z]).T\n",
@@ -627,14 +630,13 @@
     "testc = cloud.get_neighbors(k=5)\n",
     "distances = pcd.compute_nearest_neighbor_distance()\n",
     "avg_dist = np.mean(distances)\n",
-    "\n",
     "# mesh.compute_vertex_normals()\n",
     "\n",
     "\n",
     "#compute the normals\n",
     "pcd.estimate_normals(); #mandatory\n",
     "# pcd.normals = o3d.utility.Vector3dVector(point_cloud) #perfectly radial and long, independent by the tangent plane\n",
-    "# They see good for open surfaces, but not for my case\n",
+    "# They seem good for open surfaces, but not for my case\n",
     "# pcd.estimate_normals(search_param=o3d.geometry.KDTreeSearchParamHybrid(radius=0.05,max_nn=20));\n",
     "# pcd.estimate_normals(search_param=o3d.geometry.KDTreeSearchParamKNN(knn=50));\n",
     "\n",
@@ -658,7 +660,7 @@
     "\n",
     "#Poisson algorithm\n",
     "#high bins\n",
-    "poisson_mesh, densities = o3d.geometry.TriangleMesh.create_from_point_cloud_poisson(pcd, depth=9, width=0, scale=2., linear_fit=False)\n",
+    "poisson_mesh, densities = o3d.geometry.TriangleMesh.create_from_point_cloud_poisson(pcd, depth=10, width=0, scale=2.5, linear_fit=False)\n",
     "# poisson_mesh, densities = o3d.geometry.TriangleMesh.create_from_point_cloud_poisson(pcd, depth=9, width=0, scale=2., linear_fit=False)\n",
     "\n",
     "#normal bins\n",
